# typedb-kgqa

./: .gitignore  CLAUDE.md  NOTES.md  README.md  pyproject.toml
helpers/: pretty_print.py
helpers/2wikimultihopqa/: extract.py
src/typedb_kgqa/: __init__.py  answer_rag.py  common.py  fetch_schema.py  generate_query.py  graphrag_answer.py  graphrag_construction.py  ingest_documents.py  kg_construction.py  typeql_construction.py  vanilla_kg_construction.py
src/typedb_kgqa/graphrag/: answer.py  construction.py
src/typedb_kgqa/prompts/: generate_query.txt  graphrag_answer.txt  graphrag_construction.txt  kg_construction.txt  rag_answer.txt  typeql_generate_query.txt  vanilla_kg_construction.txt
src/typedb_kgqa/schema/: 2wmhqa.tql  base-schema.tql  script_graphrag.tqls
src/typedb_kgqa/typeql/: 2wmhqa.tql  base-schema.tql  graphrag-schema.tql  script_2wmhqa.tqls  script_vanilla.tqls  vanilla-schema.tql
src/typedb_kgqa/typeql_krr/: construction.py  generate_query.py
tests/: test_lines_to_typeql.py  test_typedb_kgqa.py
