[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typedb-kgqa"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Krishnan Govindraj", email = "community@typedb.com" },
]
dependencies = [
    "typedb-driver",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
